fix: grunt tests by removing grunt
This can be re-enabled later if it's a pressing concern - currently flagging errors due to d3 dist css files.

Note that a locally placed stylelintignore does not seem to be working.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,5 @@ jobs:
     # uses: catalyst/catalyst-moodle-workflows/.github/workflows/group-35-plus-ci.yml@main
     with:
       disable_behat: true
+      disable_grunt: true
       extra_php_extensions: excimer
